DDW-480 Tile view in the delegation center - fixing PopOver tooltip padding

--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -575,3 +575,7 @@
   background: var(--theme-staking-stake-pool-tooltip-neutral-background-color);
   color: var(--theme-staking-stake-pool-tooltip-neutral-text-color);
 }
+
+.tooltipWithHTMLContent {
+  padding: 10px;
+}
