DDW-480 Tile view in the delegation center - fixing PopOver tooltip padding

--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -385,7 +385,7 @@
 }
 
 :global {
-  .SimplePopOver_root.tippy-box[data-theme~=polymorph] .tippy-content {
+  .SimplePopOver_root.tippy-box[data-theme~='polymorph'] .tippy-content {
     padding: 0;
   }
 }
