[DDW-496]: Adjust change password dialog styles

--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -4,14 +4,6 @@
 .dialog {
   font-family: var(--font-light);
 
-  :global .Dialog_title {
-    margin-bottom: 0;
-  }
-
-  :global .Dialog_content {
-    padding-top: 25px;
-  }
-
   .spendingPasswordFields {
     transition: all 400ms ease;
 
@@ -30,13 +22,14 @@
 
     .spendingPasswordField {
       display: flex;
+      position: relative;
 
       > span {
         height: 12px;
         left: 145px;
         outline: none;
         position: absolute;
-        top: 54px;
+        top: 4px;
         width: 12px;
       }
 
