DDW-480 Tile view in the delegation center - fixing PopOver tooltip active state

--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -412,6 +412,10 @@
   }
 }
 
+.tooltipLabelWrapper {
+  padding: 8px 10px;
+}
+
 :global {
   .SimplePopOver_root.tippy-box[data-theme~='polymorph'] .tippy-content {
     padding: 0;
