--- a/source/renderer/app/themes/index.global.scss
+++ b/source/renderer/app/themes/index.global.scss
@@ -265,6 +265,11 @@ body,
     width: 20px;
   }
 
+  &::-webkit-scrollbar-button {
+    display: block;
+    height: 6px;
+  }
+
   &::-webkit-scrollbar-track {
     background-color: transparent;
   }
