--- a/source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.scss
+++ b/source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.scss
@@ -78,7 +78,7 @@
     font-family: var(--font-regular);
     font-size: 14px;
     line-height: 1.43;
-    padding: 10px 20px;
+    padding: 10px 20px 0;
 
     p {
       margin-bottom: 3px;
