--- a/source/renderer/app/components/wallet/transactions/render-strategies/VirtualTransactionList.scss
+++ b/source/renderer/app/components/wallet/transactions/render-strategies/VirtualTransactionList.scss
@@ -14,6 +14,14 @@
     height: calc(100% - 190px);
   }
 
+  *::-webkit-scrollbar-button {
+    display: none;
+  }
+
+  *::-webkit-scrollbar-track {
+    margin-bottom: 12px;
+  }
+
   :global(.ReactVirtualized__Grid__innerScrollContainer) {
     overflow: visible !important;
   }
