--- a/source/renderer/app/containers/static/AboutDialog.scss
+++ b/source/renderer/app/containers/static/AboutDialog.scss
@@ -9,6 +9,10 @@
   top: 0;
   z-index: 9999;
 
+  &::-webkit-scrollbar-button {
+    height: 21px;
+  }
+
   @media (max-width: 950px), (max-height: 678px) {
     overflow-y: overlay;
   }
