--- a/source/renderer/app/containers/status/DaedalusDiagnosticsDialog.scss
+++ b/source/renderer/app/containers/status/DaedalusDiagnosticsDialog.scss
@@ -1,8 +1,3 @@
-.dialog {
-  height: 100%;
-  width: 100%;
-}
-
 .overlay {
   bottom: 0;
   left: 0;
@@ -11,4 +6,17 @@
   right: 0;
   top: 0;
   z-index: 9999;
+
+  *::-webkit-scrollbar-button {
+    height: 36px;
+  }
+}
+
+.dialog {
+  height: 100%;
+  width: 100%;
+
+  &:focus {
+    outline: none;
+  }
 }
