[DDW-496] Scrollable dialogs improvement (#2285)
* [DDW-496]: Update scroll view layout of modal dialog component

* [DDW-496]: Update changelog

* [DDW-496] Merges develop

* [DDW-496]: Adjust wallet create modal styles

* [DDW-496]: Adjust dialog scrollbar styles

* [DDW-496]: Adjust wallet restore dialog styles

* [DDW-496]: Adjust wallet delegation dialog styles

* [DDW-496]: Adjust change password dialog styles

* [DDW-496]: Update translations

* [DDW-496] Fix scrollbar issues

Co-authored-by: Aleksandar Djordjevic <aca_eliminator@hotmail.com>
Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/components/widgets/Dialog.scss
+++ b/source/renderer/app/components/widgets/Dialog.scss
@@ -24,19 +24,32 @@
     text-align: center;
   }
 
-  & > .content {
+  & > .contentWrapper {
     flex: 1;
     margin-right: -25px;
     overflow-x: hidden;
     overflow-y: overlay;
-    padding-bottom: 30px;
     padding-right: 25px;
     scroll-behavior: smooth;
+
+    &::-webkit-scrollbar-button {
+      display: none;
+    }
+
+    &::-webkit-scrollbar-track {
+      margin-bottom: 12px;
+      margin-top: -8px;
+    }
+
+    .content {
+      margin-bottom: 20px;
+    }
   }
 
   & > .actions {
     display: flex;
     flex-shrink: 0;
+    margin-top: 10px;
 
     &.columnDirection {
       align-items: center;
