DDW-480 Tile view in the delegation center - fixing PopOver tooltip cursor

--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -20,6 +20,7 @@
     border: none;
     border-radius: 0;
     box-shadow: none;
+    cursor: initial;
     margin-left: -12px;
     padding: 5px;
     pointer-events: initial;
