[DDW-480] Tile view in the delegation center (#2275)
* DDW-480 Tile view in the delegation center

* DDW-480 Tile view in the delegation center - adding epoch titles

* DDW-480 Tile view in the delegation center - styling epoch titles

* DDW-480 Tile view in the delegation center - adding epoch tiles

* DDW-480 Tile view in the delegation center - adding translations

* DDW-480 Tile view in the delegation center - positioning & styling tiles

* DDW-480 Tile view in the delegation center - positioning & styling tiles

* DDW-480 Tile view in the delegation center - positioning & styling tiles

* DDW-480 Tile view in the delegation center - positioning & styling tiles

* DDW-480 Tile view in the delegation center - positioning & styling tiles

* DDW-480 Tile view in the delegation center - implementing tile view on Wallet row on Delegation center

* DDW-480 Tile view in the delegation center - implementing tile view on Wallet row on Delegation center

* DDW-480 Tile view in the delegation center - updating changelog

* DDW-480 Tile view in the delegation center - updating hover effect for action buttons

* DDW-480 Tile view in the delegation center - fixes

* DDW-480 Tile view in the delegation center - fixes

* DDW-480 Tile view in the delegation center - fixes

* DDW-480 Tile view in the delegation center - fixes

* [DDW-480] Run translation manager and prettier

* DDW-480 Tile view in the delegation center - fixing positioning of sync loader

* DDW-480 Tile view in the delegation center - fixes for hover on tiles

* DDW-480 Tile view in the delegation center - fixes for hover on tiles

* DDW-480 Tile view in the delegation center - fixes for hover on tiles

* DDW-480 Tile view in the delegation center - adding stakepool tooltip on click

* DDW-480 Tile view in the delegation center - adding stakepool tooltip on hover

* DDW-480 Tile view in the delegation center - fixing stakepool tooltip position

* DDW-480 Tile v

--- a/source/renderer/app/components/staking/delegation-center/DelegationCenterBody.scss
+++ b/source/renderer/app/components/staking/delegation-center/DelegationCenterBody.scss
@@ -1,7 +1,7 @@
 @import '../stakingConfig';
 
 .component {
-  margin: 0 0 20px 20px;
+  margin: 20px 0 20px 20px;
 
   &.isLoading {
     align-items: center;
@@ -17,7 +17,23 @@
 
   .bodyTitle {
     @extend %regularLightColorText;
-    margin: 0 0 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 0 10px 0;
+    padding: 0 22px 0 20px;
+
+    .rightBodyTitle {
+      display: flex;
+      justify-content: space-between;
+      max-width: 332px;
+      width: 100%;
+
+      span {
+        display: flex;
+        justify-content: center;
+        width: 80px;
+      }
+    }
   }
 
   .mainContent {
