--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -15,6 +15,18 @@
   width: 280px;
   z-index: 1000;
 
+  &.delegationViewTooltip {
+    background: none;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    cursor: initial;
+    margin-left: -12px;
+    padding: 5px;
+    pointer-events: initial;
+    position: initial;
+  }
+
   :global {
     button.SimpleButton_root {
       background-color: var(
