DDW-500 Implement design for native tokens - Wallet token send form updates for deposit, fee fields

--- a/source/renderer/app/components/wallet/WalletTokenSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendForm.scss
@@ -33,6 +33,10 @@
     .SimpleFormField_error a {
       color: var(--rp-formfield-error-text-color, rgba(222, 50, 38, 0.5));
     }
+
+    .AmountInputSkin_total {
+      left: 180px;
+    }
   }
 }
 
