DDW-500 Implement design for native tokens - Wallet token send form for field container + adding confirmation screen

--- a/source/renderer/app/components/wallet/WalletTokenSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendForm.scss
@@ -89,10 +89,9 @@
 .buttonsContainer {
   align-items: center;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 
-  .nextButton,
-  .resetButton {
-    margin: 0 30px;
+  button {
+    margin: 0 10px;
   }
 }
