DDW-500 Implement design for native tokens - Wallet token send form receiver field fixes

--- a/source/renderer/app/components/wallet/WalletTokenSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendForm.scss
@@ -68,6 +68,46 @@
   }
 }
 
+.receiverInput {
+  .clearReceiverContainer {
+    bottom: 0.5px;
+    display: flex;
+    height: 48px;
+    line-height: 48px;
+    padding-left: 20px;
+    position: absolute;
+    right: 10px;
+
+    .clearReceiverButton {
+      background-color: var(
+          --theme-staking-stake-pools-search-clear-button-background-color
+      );
+      border-radius: 3px;
+      cursor: pointer;
+      height: 28px;
+      width: 28px;
+
+      &:hover {
+        background-color: var(
+            --theme-staking-stake-pools-search-clear-button-hover-background-color
+        );
+      }
+
+      .clearReceiverIcon {
+        > svg {
+          position: relative;
+          top: 0.5px;
+          width: 10px;
+
+          > g > g {
+            fill: var(--theme-staking-stake-pools-search-clear-button-color);
+          }
+        }
+      }
+    }
+  }
+}
+
 .estimatedFeeInput,
 .depositInput {
   :global {
