DDW-500 Implement design for native tokens - Wallet transactions with tokens

--- a/source/renderer/app/components/wallet/transactions/Transaction.scss
+++ b/source/renderer/app/components/wallet/transactions/Transaction.scss
@@ -244,3 +244,10 @@
     }
   }
 }
+
+.transactionMetadata {
+  font-family: var(--font-regular);
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.38;
+}
